+- Moving uid/uname cache from AOChat to core/PlayerList.php. Calls to core("chat")->get_u* are now depricated and PlayerList does return BotError on failures.
+- rosterupdate seems to output alot of errors todo with failed to get whois
 
+Known breakage
+- IRC module fails to process commands given in IRC.


﻿-------------
Version 0.6.4
-------------
- Modified the network protocol to work with AoC 1.05
- Reversing stripping of control characters on text from IRC for now.
- htmlspecialchars_decode text going to IRC to decode &amp; and similar.
- IRC join/part/quit messages now properly prefixed on IRC and are also relayed over guild relay if UseGuildRelay is set for IRC module.
- IRC part/quit messages are now relayed ingame.
- Fixed flip command
- Added the option to make reason required for !ban add
- Added a check for botname_rules.txt before getting rules.txt
- Lots of Changes to Raid module, lots of new function and features including restart/crash support, raid logging, raid control interface, punish raiders, move countdown, min level and also fixed alot of problems with output to wrong place or unnessesary spam
- Lots of Changes to Bid module, lots of new function and deatures including useing points log, !bid cancel, !bid all, and more
- Corrected some color codes and time zone for "last online" in !whois (AoC only)

-------------
Version 0.6.3
-------------
- Fixed stripping of control characters on text from IRC (logon/logoff)
- Fixed a bug where the quotes module would crash if there where no quotes in the database
- Added option to relay to suffix relayed text with a characters main. Controlled using !set relay showmain on/off
- Added option to truncate the name of the main character for relayed text.
- No Longer invites because of a bot restart if autoinvite is on, they will get invited if they were in PG before restart anyway
- Added Option to have News Spammed at PGjoin.
- Added improved handling of rerolled characters.