@@ -116,7 +116,7 @@ class Chat_Queue_Core extends BasePassiveModule
 	}
 
 	/*
-	Sents messages left...
+	Sets messages left...
 	*/
 	function set_msgs()
 	{
@@ -147,9 +147,22 @@ class Chat_Queue_Core extends BasePassiveModule
 	function into_queue($to, $msg, $type, $priority)
 	{
 		if ($priority == 0)
-			$this->queue[] = array($to , $msg , $type);
-		else
-			$this->queue_low[] = array($to , $msg , $type);
+		{
+			// Filter duplicate messages. The exact same message twice in a queue
+			// results most likely from double clicking a link or spamming the bot
+			// (like if 100 people are klicking on a guild info link multiple times).
+			// There is no point in sending the same answer back twice in a row.
+			foreach ($this->queue as $item)
+				if ($item[0]==$to && $item[1]==$msg && $item[2]==$type)
+					return;
+			$this->queue[] = array($to, $msg, $type);
+		} else {
+			// Filter duplicate messages.
+			foreach ($this->queue_low as $item)
+				if ($item[0]==$to && $item[1]==$msg && $item[2]==$type)
+					return;
+			$this->queue_low[] = array($to, $msg, $type);
+		}
 	}
 }
 ?>
